--- a/contato/templates/contato/contato.html
+++ b/contato/templates/contato/contato.html
@@ -13,6 +13,33 @@
   <p><b>Data Criação: </b>{{ contact.create_date }} </p>
   <p><b>Descrição: </b>{{ contact.description }} </p>
   <p><b>Categoria: </b>{{ contact.category.name}} </p>
-</div>
+<br><br>
+  <div class="contact-links">
+    <a class ="btn btn-link"  href="{% url 'contato:update' contact.id %}">Update</a>
+<br><br>
+   <form action="{% url 'contato:delete' contact.id %}" method="POST">
+
+        {% csrf_token %}
+
+
+
+
+        {% if confirmation == 'no' %}
+
+          <input type="hidden" name="confirmation" value="yes">
+
+          <button class="btn btn-link btn-delete" type="submit">Confirma?</button>
+
+        {% else %}
+
+          <button class="btn btn-link btn-delete" type="submit">Delete</button>
+
+        {% endif %}
+
+      </form>
+
+    </div>
+
+  </div>
 
 {% endblock content %}
