--- a/contato/templates/contato/create.html
+++ b/contato/templates/contato/create.html
@@ -7,11 +7,9 @@
     <h2>Contato</h2>
 
     <form
-<<<<<<< HEAD
+
       action="{{ form_action }}"
-=======
-      action=""
->>>>>>> cc44d4472d1f6704bbd8b5bcfbd4b1d3140c35fa
+
       method="POST"
       enctype="multipart/form-data"
     >
@@ -22,10 +20,13 @@
             <div class="form-group">
               <label for="{{ field.id_for_label }}">{{ field.label }}</label>
               {{ field}}
-<<<<<<< HEAD
+
               {{ field.errors }}
-=======
->>>>>>> cc44d4472d1f6704bbd8b5bcfbd4b1d3140c35fa
+             {% if field.name == 'picture' and field.value.url %}
+                <div class="form-group">
+                  <img src="{{ field.value.url }}" alt="">
+                </div>
+            {% endif %}
             </div>
         {% endfor %}
         </div>
