--- a/contato/templates/contato/contato.html
+++ b/contato/templates/contato/contato.html
@@ -13,7 +13,13 @@
   <p><b>Data Criação: </b>{{ contact.create_date }} </p>
   <p><b>Descrição: </b>{{ contact.description }} </p>
   <p><b>Categoria: </b>{{ contact.category.name}} </p>
-<<<<<<< HEAD
+
+     {% if contact.picture %}
+      <p>
+        <img src="{{ contact.picture.url }}" alt="{{ contact.first_name }} {{ contact.last_name }}">
+      </p>
+    {% endif %}
+
 <br><br>
   <div class="contact-links">
     <a class ="btn btn-link"  href="{% url 'contato:update' contact.id %}">Update</a>
@@ -42,8 +48,4 @@
     </div>
 
   </div>
-=======
-</div>
->>>>>>> cc44d4472d1f6704bbd8b5bcfbd4b1d3140c35fa
-
 {% endblock content %}
