--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -1,38 +1,38 @@
- <header class="header">
-    <h1 class="header-heading">
-      <a href="{% url 'contato:index' %}" class="header-link">
-        Agenda
-      </a>
-    </h1>
+<header class="header">
+  <h1 class="header-heading">
+    <a href="{% url 'contato:index' %}" class="header-link">
+      Agenda
+    </a>
+  </h1>
 
-    <nav class="menu">
-      <ul class="menu-list">
-        <li class="menu-item">
-            <a href="{% url 'contato:create' %}" class="menu-link">
-            Create
-            </a>
-        </li>
-        <li class="menu-item">
-          <a href="" class="menu-link">
-            Link 2
-          </a>
-        </li>
-      </ul>
-    </nav>
+  <nav class="menu">
+    <ul class="menu-list">
 
-    <div class="search">
-      <form
-        action="{% url 'contato:consulta' %}"
-        method="GET"
-      >
-        <input
-          type="search"
-          class="search-input"
-          placeholder="Search"
-          id="search"
-          name="q"
-          value="{{ resquest.GET.get.q.strip }}"
-        >
-      </form>
-    </div>
-  </header>
+      {% if user.is_authenticated %}
+      <li class="menu-item">
+        <a href="{% url 'contato:create' %}" class="menu-link">Create</a>
+      </li>
+      <li class="menu-item">
+        <a href="{% url 'contato:user_update' %}" class="menu-link">Profile</a>
+      </li>
+      <li class="menu-item">
+        <a href="{% url 'contato:logout' %}" class="menu-link">Logout</a>
+      </li>
+      {% else %}
+      <li class="menu-item">
+        <a href="{% url 'contato:login' %}" class="menu-link">Login</a>
+      </li>
+      <li class="menu-item">
+        <a href="{% url 'contato:register' %}" class="menu-link">Register</a>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
+
+  <div class="search">
+    <form action="{% url 'contato:consulta' %}" method="GET">
+      <input type="search" class="search-input" placeholder="Pesquisar" id="search" name="q"
+        value="{{ resquest.GET.get.q.strip }}">
+    </form>
+  </div>
+</header>
