--- a/contato/templates/contato/login.html
+++ b/contato/templates/contato/login.html
@@ -4,8 +4,16 @@
   
   <div class="form-wrapper">
 
-    <h2>Register</h2>
+    <h2>Login</h2>
 
-    {% include 'contato/partials/_user-form.html' %}
-
+    {% if user.is_authenticated %}
+      <p>
+        Você fez login como {{ user.username }}.
+        Clique <a href="{% url 'contato:logout' %}">aqui</a>
+        para sair.
+      </p>
+    {% else %}
+      {% include 'contato/partials/_user-form.html' %}
+    {% endif %}
+  </div>
 {% endblock content %}
