--- a/contato/templates/contato/contato.html
+++ b/contato/templates/contato/contato.html
@@ -21,31 +21,21 @@
     {% endif %}
 
 <br><br>
-  <div class="contact-links">
-    <a class ="btn btn-link"  href="{% url 'contato:update' contact.id %}">Update</a>
-<br><br>
-   <form action="{% url 'contato:delete' contact.id %}" method="POST">
+{% if user == contact.owner %}
+<div class="contact-links">
+  <a class="btn btn-link" href="{% url 'contato:update' contact.id %}">Update</a>
 
-        {% csrf_token %}
+  <form action="{% url 'contato:delete' contact.id %}" method="POST">
+    {% csrf_token %}
 
-
-
-
-        {% if confirmation == 'no' %}
-
-          <input type="hidden" name="confirmation" value="yes">
-
-          <button class="btn btn-link btn-delete" type="submit">Confirma?</button>
-
-        {% else %}
-
-          <button class="btn btn-link btn-delete" type="submit">Delete</button>
-
-        {% endif %}
-
-      </form>
-
-    </div>
-
-  </div>
+    {% if confirmation == 'no' %}
+      <input type="hidden" name="confirmation" value="yes">
+      <button class="btn btn-link btn-delete" type="submit">Confirma?</button>
+    {% else %}
+      <button class="btn btn-link btn-delete" type="submit">Delete</button>
+    {% endif %}
+  </form>
+</div>
+{% endif %}
+</div>
 {% endblock content %}
